finalized your-projects section

--- a/index.html
+++ b/index.html
@@ -58,88 +58,90 @@
             <div class="content">
                 <div class="projects">
                     <p>Your Projects</p>
-                    <div class="card">
-                        <p>Super Cool Project</p>
-                        <div class="description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                            Modi, voluptates velit eius architecto accusamus animi laborum.
-                            Veritatis quae consectetur labore id suscipit. 
-                            Et iusto sint consequuntur voluptate nemo debitis rem.
+                    <div class="cards-container">
+                        <div class="card">
+                            <p>Super Cool Project</p>
+                            <div class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Modi, voluptates velit eius architecto accusamus animi laborum.
+                                Veritatis quae consectetur labore id suscipit. 
+                                Et iusto sint consequuntur voluptate nemo debitis rem.
+                            </div>
+                            <div class="clickables">
+                                <span class="mdi mdi-star-plus-outline"></span>
+                                <span class="mdi mdi-eye-plus-outline"></span>
+                                <span class="mdi mdi-transit-connection-variant"></span>
+                            </div>
                         </div>
-                        <div class="clickables">
-                            <span class="mdi mdi-star-plus-outline"></span>
-                            <span class="mdi mdi-eye-plus-outline"></span>
-                            <span class="mdi mdi-transit-connection-variant"></span>
+                        <div class="card">
+                            <p>Super Cool Project</p>
+                            <div class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Modi, voluptates velit eius architecto accusamus animi laborum.
+                                Veritatis quae consectetur labore id suscipit. 
+                                Et iusto sint consequuntur voluptate nemo debitis rem.
+                            </div>
+                            <div class="clickables">
+                                <span class="mdi mdi-star-plus-outline"></span>
+                                <span class="mdi mdi-eye-plus-outline"></span>
+                                <span class="mdi mdi-transit-connection-variant"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <p>Super Cool Project</p>
-                        <div class="description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                            Modi, voluptates velit eius architecto accusamus animi laborum.
-                            Veritatis quae consectetur labore id suscipit. 
-                            Et iusto sint consequuntur voluptate nemo debitis rem.
+                        <div class="card">
+                            <p>Super Cool Project</p>
+                            <div class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Modi, voluptates velit eius architecto accusamus animi laborum.
+                                Veritatis quae consectetur labore id suscipit. 
+                                Et iusto sint consequuntur voluptate nemo debitis rem.
+                            </div>
+                            <div class="clickables">
+                                <span class="mdi mdi-star-plus-outline"></span>
+                                <span class="mdi mdi-eye-plus-outline"></span>
+                                <span class="mdi mdi-transit-connection-variant"></span>
+                            </div>
                         </div>
-                        <div class="clickables">
-                            <span class="mdi mdi-star-plus-outline"></span>
-                            <span class="mdi mdi-eye-plus-outline"></span>
-                            <span class="mdi mdi-transit-connection-variant"></span>
+                        <div class="card">
+                            <p>Super Cool Project</p>
+                            <div class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Modi, voluptates velit eius architecto accusamus animi laborum.
+                                Veritatis quae consectetur labore id suscipit. 
+                                Et iusto sint consequuntur voluptate nemo debitis rem.
+                            </div>
+                            <div class="clickables">
+                                <span class="mdi mdi-star-plus-outline"></span>
+                                <span class="mdi mdi-eye-plus-outline"></span>
+                                <span class="mdi mdi-transit-connection-variant"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <p>Super Cool Project</p>
-                        <div class="description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                            Modi, voluptates velit eius architecto accusamus animi laborum.
-                            Veritatis quae consectetur labore id suscipit. 
-                            Et iusto sint consequuntur voluptate nemo debitis rem.
+                        <div class="card">
+                            <p>Super Cool Project</p>
+                            <div class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Modi, voluptates velit eius architecto accusamus animi laborum.
+                                Veritatis quae consectetur labore id suscipit. 
+                                Et iusto sint consequuntur voluptate nemo debitis rem.
+                            </div>
+                            <div class="clickables">
+                                <span class="mdi mdi-star-plus-outline"></span>
+                                <span class="mdi mdi-eye-plus-outline"></span>
+                                <span class="mdi mdi-transit-connection-variant"></span>
+                            </div>
                         </div>
-                        <div class="clickables">
-                            <span class="mdi mdi-star-plus-outline"></span>
-                            <span class="mdi mdi-eye-plus-outline"></span>
-                            <span class="mdi mdi-transit-connection-variant"></span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <p>Super Cool Project</p>
-                        <div class="description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                            Modi, voluptates velit eius architecto accusamus animi laborum.
-                            Veritatis quae consectetur labore id suscipit. 
-                            Et iusto sint consequuntur voluptate nemo debitis rem.
-                        </div>
-                        <div class="clickables">
-                            <span class="mdi mdi-star-plus-outline"></span>
-                            <span class="mdi mdi-eye-plus-outline"></span>
-                            <span class="mdi mdi-transit-connection-variant"></span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <p>Super Cool Project</p>
-                        <div class="description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                            Modi, voluptates velit eius architecto accusamus animi laborum.
-                            Veritatis quae consectetur labore id suscipit. 
-                            Et iusto sint consequuntur voluptate nemo debitis rem.
-                        </div>
-                        <div class="clickables">
-                            <span class="mdi mdi-star-plus-outline"></span>
-                            <span class="mdi mdi-eye-plus-outline"></span>
-                            <span class="mdi mdi-transit-connection-variant"></span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <p>Super Cool Project</p>
-                        <div class="description">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                            Modi, voluptates velit eius architecto accusamus animi laborum.
-                            Veritatis quae consectetur labore id suscipit. 
-                            Et iusto sint consequuntur voluptate nemo debitis rem.
-                        </div>
-                        <div class="clickables">
-                            <span class="mdi mdi-star-plus-outline"></span>
-                            <span class="mdi mdi-eye-plus-outline"></span>
-                            <span class="mdi mdi-transit-connection-variant"></span>
+                        <div class="card">
+                            <p>Super Cool Project</p>
+                            <div class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                Modi, voluptates velit eius architecto accusamus animi laborum.
+                                Veritatis quae consectetur labore id suscipit. 
+                                Et iusto sint consequuntur voluptate nemo debitis rem.
+                            </div>
+                            <div class="clickables">
+                                <span class="mdi mdi-star-plus-outline"></span>
+                                <span class="mdi mdi-eye-plus-outline"></span>
+                                <span class="mdi mdi-transit-connection-variant"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
