Finalized the design for announcement section

--- a/index.html
+++ b/index.html
@@ -146,38 +146,51 @@
                     </div>
                 </div>
                 <div class="announcements">
-                    <div>
-                        <p>Site Maintenance</p>
+                    <p>Announcements</p>
+                    <div class="announcement-container">
                         <div>
-                            There is an outage last friday night and it was so bad to the point that
-                            I saw them walking in the water withouth raincoat or something.
+                            <p>Site Maintenance</p>
+                            <div class="description">
+                                There is an outage last friday night and it was so bad to the point that
+                                I saw them walking in the water withouth raincoat or something.
+                            </div>
                         </div>
+                        
                         <div>
-                            There is an outage last friday night and it was so bad to the point that
-                            I saw them walking in the water withouth raincoat or something.
+                            <p>Site Maintenance</p>
+                            <div class="description">
+                                There is an outage last friday night and it was so bad to the point that
+                                I saw them walking in the water withouth raincoat or something.
+                            </div>
                         </div>
+                        
                         <div>
-                            There is an outage last friday night and it was so bad to the point that
-                            I saw them walking in the water withouth raincoat or something.
+                            <p>Site Maintenance</p>
+                            <div class="description">
+                                There is an outage last friday night and it was so bad to the point that
+                                I saw them walking in the water withouth raincoat or something.
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="trending">
                     <p>Trending</p>
-                    <div class="trending-user">
-                        <div>profile</div>
-                        <div class="trending-username">@kitmrjn</div>
-                        <div class="trending-title">World Peace Builder</div>
-                    </div>
-                    <div class="trending-user">
-                        <div>profile</div>
-                        <div class="trending-username">@kitmrjn</div>
-                        <div class="trending-title">World Peace Builder</div>
-                    </div>
-                    <div class="trending-user">
-                        <div>profile</div>
-                        <div class="trending-username">@kitmrjn</div>
-                        <div class="trending-title">World Peace Builder</div>
+                    <div class="trending-container">
+                        <div class="trending-user">
+                            <div>profile</div>
+                            <div class="trending-username">@kitmrjn</div>
+                            <div class="trending-title">World Peace Builder</div>
+                        </div>
+                        <div class="trending-user">
+                            <div>profile</div>
+                            <div class="trending-username">@kitmrjn</div>
+                            <div class="trending-title">World Peace Builder</div>
+                        </div>
+                        <div class="trending-user">
+                            <div>profile</div>
+                            <div class="trending-username">@kitmrjn</div>
+                            <div class="trending-title">World Peace Builder</div>
+                        </div>
                     </div>
                 </div>
             </div>
