finished designing the overall layout

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <p>Super Cool Project</p>
+                            <p>Calculator App</p>
                             <div class="description">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                                 Modi, voluptates velit eius architecto accusamus animi laborum.
@@ -130,11 +130,9 @@
                             </div>
                         </div>
                         <div class="card">
-                            <p>Super Cool Project</p>
+                            <p>Vincenthinks on top</p>
                             <div class="description">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                                Modi, voluptates velit eius architecto accusamus animi laborum.
-                                Veritatis quae consectetur labore id suscipit. 
+                                It is in the nature of man to rise against the reality of security and pursue the illusion of danger.
                                 Et iusto sint consequuntur voluptate nemo debitis rem.
                             </div>
                             <div class="clickables">
@@ -157,18 +155,18 @@
                         </div>
                         
                         <div>
-                            <p>Site Maintenance</p>
+                            <p>Network Issue</p>
                             <div class="description">
-                                There is an outage last friday night and it was so bad to the point that
-                                I saw them walking in the water withouth raincoat or something.
+                               In the tapestry of life, we are but threads. Choose to weave a pattern worth remembering.
+                                Even in the darkest of nights, a single star can illuminate the path forward.
                             </div>
                         </div>
                         
                         <div>
-                            <p>Site Maintenance</p>
+                            <p>VTO Tort Camapaign </p>
                             <div class="description">
-                                There is an outage last friday night and it was so bad to the point that
-                                I saw them walking in the water withouth raincoat or something.
+                                Life is like a book with many chapters. Some tell of tragedy, others of triumph. 
+                                Some chapters are dull and ordinary, others intense and exciting. 
                             </div>
                         </div>
                     </div>
@@ -177,19 +175,24 @@
                     <p>Trending</p>
                     <div class="trending-container">
                         <div class="trending-user">
-                            <div>profile</div>
+                            <img src="kit.jpg" alt="profile-picture">
+                            <div class="trending-username">@leomigu</div>
+                            <div class="trending-title">Dancing Operator</div>
+                        </div>
+                        <div class="trending-user">
+                            <img src="kit.jpg" alt="profile-picture">
                             <div class="trending-username">@kitmrjn</div>
                             <div class="trending-title">World Peace Builder</div>
                         </div>
                         <div class="trending-user">
-                            <div>profile</div>
-                            <div class="trending-username">@kitmrjn</div>
-                            <div class="trending-title">World Peace Builder</div>
+                            <img src="kit.jpg" alt="profile-picture">
+                            <div class="trending-username">@clarene</div>
+                            <div class="trending-title">Jack of All Trades</div>
                         </div>
                         <div class="trending-user">
-                            <div>profile</div>
-                            <div class="trending-username">@kitmrjn</div>
-                            <div class="trending-title">World Peace Builder</div>
+                            <img src="kit.jpg" alt="profile-picture">
+                            <div class="trending-username">@alberito</div>
+                            <div class="trending-title">Master of None</div>
                         </div>
                     </div>
                 </div>
